Use AndroidX and update google play services version

--- a/client/java/SafetyNetSample/gradle.properties
+++ b/client/java/SafetyNetSample/gradle.properties
@@ -12,4 +12,7 @@
 # TODO: Add your API key here for the call to the SafetyNet Attestation API.
 # See the documentation for details on how to generate the key and enable the API:
 # https://developer.android.com/training/safetynet/attestation.html#add-api-key
-safetynet_api_key = undefined
+safetynet_api_key = AIzaSyDLQPyzLEhZr6iSZFWrM7Ep4bwc9PFh1eo
+
+android.useAndroidX=true
+android.enableJetifier=true
