--- a/client/java/SafetyNetSample/build.gradle
+++ b/client/java/SafetyNetSample/build.gradle
@@ -2,15 +2,16 @@ buildscript {
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.6.2'
     }
 
-    ext.build_tools_version = '25.0.3'
+    ext.build_tools_version = '28.0.3'
     ext.support_version = '25.3.1'
-    ext.google_play_services_version = '11.0.1'
+    ext.google_play_services_version = '17.0.0'
 
     allprojects {
         repositories {
