--- a/client/java/SafetyNetSample/Application/src/main/AndroidManifest.xml
+++ b/client/java/SafetyNetSample/Application/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light">
 
         <activity
             android:name=".MainActivity"
@@ -34,6 +34,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.android.common.activities.SampleActivityBase"
+            android:label="@string/app_name"/>
     </application>
 
 
